# MusicQnA

./: .gitignore  GRPO_METHOD.md  GUIDE.md  MUSICCAPS_PIPELINE.md  README.md  SFT_INTERVIEW_PREP.md  nohup.out  pyproject.toml  requirements.txt
configs/: default.yaml  local.yaml
data/: musiccaps_manifest.jsonl  slice_from_cache_failures.jsonl
examples/: mock_manifest.jsonl
models/Qwen2.5-Omni-3B/: LICENSE  README.md  config.json  model-00003-of-00003.safetensors  model.safetensors.index.json  spk_dict.pt
musiccaps/: __init__.py  __main__.py  chat.py  clap_scorer.py  config.py  dataset.py  hub_mirrors.py  lm_backend.py  prompts.py  rewards.py  schema.py  train_grpo.py  train_sft.py
ossutil_output/: ossutil_report_20260324_194454.report
scripts/: build_manifest.py  download_musiccaps_wavs.py  preflight_ytdlp_youtube.sh  slice_musiccaps_from_cache.py
