[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "musiccaps-omni"
version = "0.1.0"
description = "MusicCaps SFT + GRPO (aspect + CLAP) for Qwen2.5-Omni Thinker"
readme = "MUSICCAPS_PIPELINE.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["musiccaps*"]
